# rdchiral

./: .gitignore  README.md  pyproject.toml  run_speed_benchmark_envs.py  setup.py  speed_benchmark_script.py
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: benchmarks.md  consistency.md  index.md  reference.md
examples/: example_notebook.ipynb
rdchiral/: __init__.py  bonds.py  chiral.py  clean.py  function_cache.py  initialization.py  logging_config.py  main.py  template_extractor.py  utils.py
scripts/: analyze_consistency.py  roundtrip_check_script.py  run_roundtrip_check.py  run_speed_benchmark_envs.py  speed_benchmark_script.py
test/: test_rdchiral.py
tests/integration/: test_extraction.py  test_extraction_cases.json  test_rdchiral.py  test_rdchiral_cases.json
tests/unit/: test_chiral.py  test_clean.py
